# bergson

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LUCIA.md  README.md  core  experiments.md  pyproject.toml
.github/workflows/: build.yml  claude-code-review.yml  claude.yml
ablations/: olmo_wmdp_lora.yaml  olmo_wmdp_lora_adam.yaml  olmo_wmdp_lora_nonorm.yaml  wikitext_wmdp_mcqa_nearest.yaml
benchmarks/: README.md  benchmark_attributor.py  benchmark_batching.py  benchmark_bergson.py  benchmark_bergson_cli.py  benchmark_dattri.py  benchmark_factors.py  benchmark_magic.py  benchmark_utils.py  kronfluence_benchmark.py  plot_cli_benchmark.py  plot_comparison.py  plot_factor_benchmark.py  plot_inmem_benchmark.py  plot_programmatic_benchmark.py  plot_projection_comparison.py  plot_styles.py  plot_vram_comparison.py  run_full_benchmark.py  run_large_models_cli_1gpu.sh  run_large_models_cli_8gpu.sh  run_projection_comparison.sh  run_query_scaling_cli.sh  run_query_scaling_magic.sh  run_small_models_cli_1gpu.sh  run_small_models_cli_2gpu.sh  run_small_models_cli_8gpu.sh  run_small_models_dattri_1gpu.sh  run_small_models_inmem_1gpu.sh  run_small_models_magic_1gpu.sh  run_small_models_magic_2gpu.sh  run_small_models_magic_3gpu.sh  save_to_disk.py
benchmarks/no_projection/: run_dattri_1gpu.sh  run_inmem_1gpu.sh
benchmarks/parallel_runs/: launch_all_benchmarks.sh  run_pythia_12b_gpu4.sh  run_pythia_160m_gpu1.sh  run_pythia_1b_gpu2.sh  run_pythia_6.9b_gpu3.sh  run_pythia_70m_gpu0.sh
benchmarks/with_projection/: run_dattri_1gpu.sh  run_inmem_1gpu.sh
bergson/: __init__.py  __main__.py  build.py  builder.py  builders.py  chunk_and_tokenize.py  cli_commands.py  collection.py  config.py  data.py  diagnose.py  distributed.py  format.py  gradients.py  huggingface.py  models.py  process_autocorrelation.py  process_grads.py  process_hessians.py  process_preconditioners.py  query.py  reduce.py  score_writer.py  sharding.py  swap.py  trackstar.py  transfer_bio_to_rewritten.py  utils.py  yaml_config.py  yaml_pipeline.py
bergson/approx_unrolling/: approx_unrolling_math.py  checkpoint_hessians.py  checkpoint_lambdas.py  pipeline.py  precompute_checkpoints.py  segment_aggregation.py  source_math.py
bergson/cli/: auto_batch_size.py  commands.py  trackstar.py
bergson/collector/: collector.py  dist_autocorrelation_gradient_collector.py  dist_hessians_gradient_collector.py  dist_preconditioners_gradient_collector.py  gradient_collectors.py  in_memory_collector.py  multi_node_gradient_collector.py
bergson/config/: __init__.py  config.py  config_io.py
bergson/hessians/: apply_hessian.py  collector.py  data_filtering_ekfac.ipynb  eigenvectors.py  ekfac_compute.py  foof.py  hessian_approximations.py  io.py  kfac.py  misaligned_datasets.ipynb  pipeline.py  shampoo.py  sharded_computation.py  tkfac.py
bergson/magic/: __init__.py  cli.py  config.py  data_stream.py  dtensor_patch.py  fsdp.py  modula_norm.py  modula_optim.py  optim.py  rtl_tqdm.py  trainer.py
bergson/models/: __init__.py
bergson/normalizer/: fit_normalizers.py
bergson/query/: attributor.py  faiss_index.py  query_index.py
bergson/score/: process_preconditioners.py  score.py  score_writer.py  scorer.py
bergson/templates/: mcqa.yaml
bergson/tuned_lens/: __init__.py  train.py
bergson/unlearn/: ckpt_deep.py  collator.py  create_unlearn_data.py  data.py  eval_job.sh  hook.py  lens_unlearn.py  log_eval_to_wandb.py  muon.py  tamper.py  token_alignment.py  transfer_bio_to_rewritten.py  transfer_from_checkpoint.py  utils.py  (+1 more)
data/: generate_facts.py  wmdp_mixed
docs/: ARCHITECTURE.md  CLI_USAGE.md  cli.rst  experiments.md  index.rst  magic.rst  pipeline.rst  preprocessing.md  preprocessing.rst  trackstar.rst  utils.rst
examples/: assemble_query.py  double_backward_pretrain.py  exp_log.md  filter_data.py  find_induction_heads.py  prototype.py  semantic.py  semantics_experiment.py  token_attribution.py  trackstar_wmdp.py  train_lora.py  trainer_grad_collection.py  validate_attribution.py
notebooks/: poison_detection.ipynb  style_ablation.ipynb
runs/: benchmark_results_1gpu.csv
scripts/: bench_cat_vs_loop.py  bench_math_sdp.py  bench_reduce.py  compare_normalizers.py  eval_filtered_models.sbatch  eval_mmlu_stem.py  eval_wmdp_bio.py  eval_wmdp_robust.py  filtered_finetune.py  fit_adam_normalizer.py  inspect_normalizers_preconditioners.py  lambda_check.py  normalized_cosine_sims.py  normalizer_ablation.py  normalizer_ablation.sbatch  prepare_retain_pile.py  raw_cosine_sim.py  regenerate_plots.py  run_bergson_vram_8gpu.sh  run_cli_benchmark_1gpu_slurm.py  run_cli_benchmark_slurm.py  run_dattri_largebatch_slurm.py  run_factor_benchmarks_10m.py  run_fixed_batch_slurm.py  run_kronfluence_vram_8gpu.sh  run_projection_fresh.py  run_projection_slurm.py  semantic_pca_ablation.py  test_batch_size_cosine.py  test_batching_cosine.py  test_bf16_unbatched_vs_tf32_batched.py  test_build_batching.py  test_padding_ratio.py  tokenize_benchmark_dataset.py  trackstar_optimizer_norm.py  trackstar_sft_norm.py  trackstar_sft_optimizer_norm.py  train_olmo_forget_pile_lora.py  train_olmo_forget_pile_lora_fp32.py  train_olmo_forget_pile_sft.py  (+19 more)
skills/: asymmetric-style.md  attribute-preservation.md  gradient-debug.md  hessian-analysis.md  preconditioner-analysis.md  semantic-metrics.md
tests/: conftest.py  test_adam_state_loading.py  test_advantages.py  test_attribute_tokens.py  test_attributor.py  test_build.py  test_builder.py  test_cli.py  test_compute_lambda.py  test_config_runner.py  test_data.py  test_ddp.py  test_distributed_batch_budget.py  test_distributed_cap.py  test_distributed_magic.py  test_force_math_sdp.py  test_format.py  test_global_projection.py  test_gradient_collection_determinism.py  test_gradients.py  test_hessians_io.py  test_log_fn.py  test_magic.py  test_multinode.py  test_muon.py  test_normalizer.py  test_query.py  test_reduce.py  test_score.py  test_sharded_runs.py  test_tokenize.py  test_trainer_callback.py  test_truncation.py  test_utils.py  test_yaml_config.py  test_yaml_pipeline.py
(+389 files in other folders)
