[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bergson"
description = "Tracing the memory of neural nets with data attribution"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["interpretability", "explainable-ai"]
license = {text = "MIT License"}
dependencies = [
    "accelerate", # For device_map in from_pretrained
    "bitsandbytes>=0.46.1",
    "datasets",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jaxtyping>=0.3.2",
    "natsort",
    "peft>=0.16.0",
    "simple-parsing",
    "torch",
    "transformers>=4.57.1",
]
version = "0.0.1"
[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pyright",
]
example = [
    "trl",
]
faiss = [
    "faiss-gpu-cu12",
]

[project.scripts]
bergson = "bergson.__main__:main"

[tool.pyright]
include = ["bergson*", "tests/ekfac_tests"]
## Temporary excludes before we merge ekfac into the main branch
exclude = [
    "bergson/attributor.py",
    "bergson/collection.py",
    "bergson/gradients.py",
    "bergson/utils.py",
]
reportPrivateImportUsage = false

[tool.setuptools.packages.find]
include = ["bergson*"]

[tool.ruff]
lint.ignore = ["E741", "F722"]   # Ambiguous variable name and jaxtyping shape annotation
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
# See https://beta.ruff.rs/docs/rules/ for more possible rules
lint.select = ["E", "F", "I"]
# Same as Black.
line-length = 120

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pre-commit-uv>=4.1.5",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
]
